<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        tools:context=".CadastroActivity">

        <View
            android:id="@+id/containerTop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background_view_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtImgViewRegisterTemplate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/imgViewRegisterTemplate"
            android:textColor="@color/black"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@id/containerTop"
            app:layout_constraintEnd_toEndOf="@id/containerTop"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/containerTop"
            app:layout_constraintTop_toTopOf="@id/containerTop"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/black"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintAnimationEnabled="true"
            app:hintEnabled="false"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerTop"
            app:layout_constraintVertical_bias="0.12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:drawableRight="@drawable/ic_email_24"
                android:fontFamily="@font/josefin_sans"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxWidth="400dp"
                android:maxLines="1"
                android:padding="15dp"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/black"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintAnimationEnabled="true"
            app:hintEnabled="false"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:drawableRight="@drawable/ic_email_24"
                android:fontFamily="@font/josefin_sans"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:maxWidth="400dp"
                android:maxLines="1"
                android:padding="15dp"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutConfirmPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/black"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintAnimationEnabled="true"
            app:hintEnabled="false"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutPass"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:drawableRight="@drawable/ic_email_24"
                android:fontFamily="@font/josefin_sans"
                android:hint="@string/hint_confimpass"
                android:inputType="textPassword"
                android:maxWidth="400dp"
                android:maxLines="1"
                android:padding="15dp"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_button_selector"
            android:enabled="true"
            android:fontFamily="@font/josefin_sans_bold"
            android:padding="15dp"
            android:text="@string/txt_button_enter_in"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutPass" />

        <TextView
            android:id="@+id/txtTelaLoginLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/txt_tela_cadastro_linkl_in"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/txtTelaCadastro"
            app:layout_constraintTop_toBottomOf="@id/txtTelaCadastro"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtTelaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center"
            android:text="@string/txt_tela_cadastro_in"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSign" />

        <View
            android:id="@+id/viewBottom"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:background="@drawable/background_view_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="631dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>